# Q-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  CREDENTIALS.md  Dockerfile  LICENSE  README.md  SECURITY.md  claude.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.claude/agents/: crypto-data-guide.md  edgar-data-guide.md  lean-api-guide.md  marimo-research-guide.md  new-pipeline-coder.md  new_strategy_coder.md  polymarket-data-guide.md  qc-algo-coder.md  qc-backtest-analyzer.md  qc-cloud-validator.md  qc-notebook-writer.md  qc-references-manager.md  wrds-data-guide.md
.claude/commands/: reflect.md
.claude/hooks/: extract_session_memory.py  load_memory.py  log_tool_event.py  (+1 more)
.github/: dependabot.yml  pull_request_template.md
MyProjects/: QUANTCONNECT_CLOUD_BACKTEST_GUIDE.md
References/: README.md  index.md
agent_graph_system/: .gitignore  config.py  docker-compose.yml  main.py  requirements.txt
docs/: agent-workflows.md  architecture.md  docker.md  getting-started.md  notebooks.md  project-map.md  release-checklist.md  research-examples.md  roadmap.md  testing.md  treasury-rates-pipeline.md
infrastructure/: requirements.txt  setup.sh
infrastructure/pipelines/crypto/: .env.example  claude.md  pyproject.toml
infrastructure/pipelines/crypto/scripts/: list_symbols.py  run_pipeline.py
infrastructure/pipelines/crypto/src/crypto_lean/: __init__.py  client.py  transform.py  writer.py
overrides/: home.html
scripts/: check-prereqs.sh  lean-backtest.sh  start-remote.sh
tests/: conftest.py
(+903 files in other folders)
